# corpusx

./: .dockerignore  .gitignore  captain-definition-nginx  captain-definition-worker  docker-compose.yml  manage.py  pyproject.toml  requirement.txt  requirements.txt
cephalon/: admin.py  apps.py  authentications.py  models.py  schedule_tasks.py  schemas.py  search.sh  tests.py  utils.py  views.py  web_socket_authentication.py
cephalon/migrations/: 0001_initial.py  0002_file_project.py  0003_rename_file_projectfile.py  0004_project_temporary.py  0005_chunkedupload.py  0006_alter_chunkedupload_upload_id.py  0007_alter_chunkedupload_offset.py  0008_alter_chunkedupload_chunk_size_projectfilecontent.py  0009_apikeyremote_topic_apikey_access_all_and_more.py  0010_projectfile_load_file_content.py  0011_projectfile_path.py  0012_chunkedupload_file_category_and_more.py  0013_apikey_user_project_user.py  0014_apikey_access_id_apikey_project_topic_projects.py  0015_remove_apikey_access_id_alter_apikey_key.py  0016_alter_project_hash.py  0017_alter_projectfile_hash.py  0018_alter_projectfilecontent_project_file.py  0019_project_encrypted.py  0020_websocketinterchange_apikey_interchanges.py  0021_rename_websocketinterchange_pyre_and_more.py  0022_alter_project_global_id.py  0023_websocketsession.py  0024_apikey_remote_pair.py  0025_websocketnode_and_more.py  0027_pyre_topics.py  (+7 more)
corpusx/: asgi.py  consumers.py  customdashboard.py  routing.py  settings.py  urls.py  wsgi.py
dockerfiles/: Dockerfile  Dockerfile-worker
nginx-conf/: corpusx.conf  nginx-prod.conf
(+6 files in other folders)
