[tool.poetry]
name = "corpusx"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-storages = "^1.14.2"
django-ninja = "^1.1.0"
django-cors-headers = "^4.3.1"
whitenoise = "^6.6.0"
django-filter = "^23.5"
django-redis = "^5.4.0"
pyjwt = "^2.8.0"
psycopg2 = "^2.9.9"
cryptography = "^41.0.7"
httpx = "^0.25.2"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
channels = "^4.0.0"
channels-redis = {extras = ["cryptography"], version = "^4.1.0"}
websockets = "^12.0"
django-json-widget = {git = "https://github.com/jmrivas86/django-json-widget.git", rev="32c6acf9dd3cf27b43e0dd38a01e2af8e6c2ae10"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
